[tool.poetry]
name = "airtagged"
version = "0.1.0"
description = ""
authors = ["Robert Dumitru <72272382+robert-dumitru@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyTelegramBotAPI = "^4.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
